qa/apps/arranger/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arranger
spec:
  template:
    spec:
      imagePullSecrets:
      - name: images-pull
      volumes:
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: corefile
        configMap:
          name: coredns-zonefiles-corefile
          defaultMode: 0444
      - name: zonefile
        configMap:
          name: qa-domain-zonefile
          defaultMode: 0444
      - name: zonefile-copy
        emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 127.0.0.1
        searches:
        - search
        - cqdg-qa.svc.cluster.qa
        - svc.cluster.qa
        - cluster.qa
        - openstacklocal
        options:
        - name: ndots
          value: "5"
      containers:
      - name: coredns
        image: ferlabcrsj/coredns:1.1.1
        command: ["/coredns"]
        args: ["-conf", "/opt/corefile/Corefile"]
        volumeMounts:
        - name: corefile
          mountPath: /opt/corefile
          readOnly: true
        - name: zonefile-copy
          mountPath: /opt/zonefiles
          readOnly: true
      - image: index.docker.io/ferlabcrsj/cqdg-api-arranger:6acf7984c0325bf441e16d4fbf97842408514eaa-1678995725 # {"$imagepolicy": "cqdg-qa-fluxcd:arranger"}
        name: arranger
        volumeMounts:
        - name: ingress-ca-certificate
          mountPath: /opt/ca-bundle
          readOnly: true
        resources:
          requests:
            memory: "2048Mi"
            cpu: '2'
          limits:
            memory: "4096Mi"
            cpu: '2'
